--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,18 +6,39 @@
     box-sizing: border-box;
 }
 
+
+@font-face {
+    font-family: 'UncommonS';
+    src: url('Uncommon-Regular.woff2') format('woff2'),
+        url('Uncommon-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+
 html {
     font-size: 16px;
 }
 
 input {
-    font-size: 14px;
+    font-size: 2rem;
+    border-radius: 3rem;
+    padding: 1.5rem;
+    background-color: #fff;
+    border: none;
+    font-family: 'UncommonS';
+}
+
+#send-location {
+    display: none;
 }
 
 body {
     line-height: 1.4;
     color: #333333;
-    font-family: Helvetica, Arial, sans-serif;
+    font-size: 2rem;
+    background-color: #ffcbaf;
+    font-family: 'UncommonS';
 }
 
 h1 {
@@ -32,19 +53,15 @@ label {
 }
 
 input {
-    border: 1px solid #eeeeee;
-    padding: 12px;
     outline: none;
 }
 
 button {
-    cursor: pointer;
-    padding: 12px;
-    background: #7C5CBF;
+    font-size: 2rem;
     border: none;
-    color: white;
-    font-size: 16px;
-    transition: background .3s ease;
+    border-radius: 3rem;
+    padding: 1.5rem;
+    font-family: 'UncommonS';
 }
 
 button:hover {
@@ -58,8 +75,38 @@ button:disabled {
 
 /* Join Page Styles */
 
+#toggle {
+    position: absolute;
+    cursor: pointer;
+    top: 1.5rem;
+    font-size: 1.5rem;
+    left: 1.5rem;
+    background-color: #fff;
+    border-radius: 3rem;
+    padding: 1.3rem 1rem 1rem 1rem;
+}
+
+.read .chat__messages {
+    margin: 1.5rem;
+    border-radius: 1rem;
+    background-color: #fff;
+}
+
+.read .message__name, .read .message__meta {
+    display: none;
+}
+
+.read .message {
+    width: fit-content;
+    background-color: transparent;
+    height: fit-content;
+    padding: 0 0.95rem 0 0;
+    float: left;
+    display: inline-block;
+}
+
 .centered-form {
-    background: #333744;
+    background: lightgray;
     width: 100vw;
     height: 100vh;   
     display: flex;
@@ -68,10 +115,8 @@ button:disabled {
 }
 
 .centered-form__box {
-    box-shadow: 0px 0px 17px 1px #1D1F26;
-    background: #F7F7FA;
     padding: 24px;
-    width: 250px;
+    font-family: 'UncommonS';
 }
 
 .centered-form button {
@@ -91,10 +136,8 @@ button:disabled {
 
 .chat__sidebar {
     height: 100vh;
-    color: white;
-    background: #333744;
-    width: 225px;
-    overflow-y: scroll
+    width: 320px;
+    overflow-y: scroll;
 }
 
 /* Chat styles */
@@ -115,18 +158,30 @@ button:disabled {
 /* Message Styles */
 
 .message {
+    background-color: red;
+    border-radius: 3rem;
+    padding: 1.5rem;
+    font-size: 2rem;
     margin-bottom: 16px;   
 }
 
+.indicator {
+    position: absolute;
+    bottom: 2.5rem;
+    font-size: 5rem;
+    left: 2rem;
+}
+
 .message__name {
-    font-weight: 600;
-    font-size: 14px;
+    font-weight: 400;
+    font-size: 1.5rem;
+    color: #fff;
     margin-right: 8px;
 }
 
 .message__meta {
-    color: #777;
-    font-size: 14px;
+    color: #fff;
+    font-size: 1.5rem;
 }
 
 .message a {
@@ -149,35 +204,33 @@ button:disabled {
 }
 
 .compose input {
-    border: 1px solid #eeeeee;
     width: 100%;
-    padding: 12px;
     margin: 0 16px 0 0;
     flex-grow: 1;
 }
 
-.compose button {
-    font-size: 14px;
-}
 
 /* Chat Sidebar Styles */
 
 .room-title {
     font-weight: 400;
-    font-size: 22px;
-    background: #2c2f3a;
-    padding: 24px;   
+    font-size: 1.5rem;
+    padding: 24px;
+    font-weight: 400;
+    margin-top: 6rem; 
 }
 
 .list-title {
-    font-weight: 500;
-    font-size: 18px;
-    margin-bottom: 4px;
+    font-size: 1.5rem;
+    font-weight: 400;
+    margin-bottom: 0;
     padding: 12px 24px 0 24px;
 }
 
 .users {
+    font-size: 1.5rem;
     list-style-type: none;
     font-weight: 300;
-    padding: 12px 24px 0 24px;
+    font-weight: 400;
+    padding: 0 24px 0 24px;
 }
