--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,12 +65,12 @@ button {
 }
 
 button:hover {
-    background: #6b47b8;
+    background: #fff;
 }
 
 button:disabled {
     cursor: default;
-    background: #7c5cbf94;
+    background: #fff;
 }
 
 /* Join Page Styles */
@@ -185,7 +185,7 @@ button:disabled {
 }
 
 .message a {
-    color: #0070CC;
+    color: #000;
 }
 
 /* Message Composition Styles */
