--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -86,6 +86,10 @@ button:disabled {
     padding: 1.3rem 1rem 1rem 1rem;
 }
 
+.read .Admin {
+    display: none !important;
+}
+
 .read .chat__messages {
     margin: 1.5rem;
     border-radius: 1rem;
@@ -151,6 +155,7 @@ button:disabled {
 
 .chat__messages {
     flex-grow: 1;
+    width: 80vw;
     padding: 24px 24px 0 24px;
     overflow-y: scroll;
 }
@@ -162,7 +167,7 @@ button:disabled {
     border-radius: 3rem;
     padding: 1.5rem;
     font-size: 2rem;
-    margin-bottom: 16px;   
+    margin-bottom: 0;   
 }
 
 .indicator {
