--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -233,10 +233,15 @@ button:disabled {
 .sort-group {
     z-index: 100;
     width: calc(100vw - 1rem);
-    position: relative;
+    position: sticky;
+    top: 5rem;
     display: flex;
     margin-top: 5rem;
     margin-bottom: 1rem;
+}
+
+button {
+    background-color: #fff;
 }
 
 .sort-group .active {
