--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -245,7 +245,6 @@ button:disabled {
 }
 
 #messages .message {
-    background-color: transparent !important;
 }
 
 .sort-group {
@@ -450,10 +449,10 @@ input[type="color"] {
 
 .read .message {
     width: fit-content;
-    background-color: transparent;
+    color: #fff !important;
     height: fit-content;
-    padding: 0 0.95rem 0 0;
     float: left;
+    padding: 0;
     display: inline-block;
 }  
 
