--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,11 +22,11 @@ html {
 
 .cursor {
     position: fixed;
-    margin-left: -2.25rem;
-    margin-top: -2.25rem;
-    width: 4.5rem;
+    margin-left: -1.5rem;
+    margin-top: -1.5rem;
+    width: 3rem;
     pointer-events: none;
-    height: 4.5rem;
+    height: 3rem;
     border-radius: 50%;
     background-color: red;
     z-index: 9999;
@@ -37,10 +37,11 @@ html {
   }
 
 input {
-    font-size: 2rem;
-    border-radius: 3rem;
-    padding: 1.5rem;
+    font-size: 1.4rem;
+    line-height: 1.2rem;
+    padding: 0.8rem 1rem 0.6rem;
     background-color: #fff;
+    border-radius: 3rem;
     border: none;
     font-family: 'UncommonS';
 }
@@ -55,8 +56,8 @@ input {
 
 body {
     line-height: 1.4;
-    color: #333333;
-    font-size: 2rem;
+    color: #000;
+    font-size: 1.4rem;
     background-color: #ffcbaf;
     font-family: 'UncommonS';
 }
@@ -73,14 +74,16 @@ label {
 }
 
 input {
+    text-align: center;
     outline: none;
 }
 
 button {
-    font-size: 1rem;
+    font-size: 1.4rem;
     border: none;
     border-radius: 3rem;
-    padding: 1.5rem;
+    line-height: 1.2rem;
+    padding: 0.8rem 1rem 0.6rem;
     margin-right: 1rem;
     font-family: 'UncommonS';
 }
@@ -116,7 +119,8 @@ button:disabled {
 
 
 #body.compose-body #message-form {
-    display: none;
+    opacity: 0.5;
+    pointer-events: none;
 }
 
 #body.compose-body .message .meta {
@@ -133,8 +137,8 @@ button:disabled {
 
 .compose-body .chat__messages {
     padding-bottom: 6rem;
-    width: calc(97vw - 0rem);
-    margin-top: 13rem;
+    width: calc(100vw - 2rem);
+    margin-top: 10.5rem;
     margin-left: 1rem;
     background-color: #fff;
     border-radius: 3rem;
@@ -142,27 +146,28 @@ button:disabled {
 
 
 .btn-invite {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     background-color: #fff;
     border-radius: 3rem;
     position: absolute;
-    top: 0.75rem;
+    bottom: 1rem;
     width: fit-content;
-    left: 0.75rem;
+    left: 1rem;
     cursor: pointer;
-    padding: 1.3rem 2rem 1rem 2rem;
+    line-height: 1.2rem;
+    padding: 0.8rem 1rem 0.6rem;
 }
 
 .btn-question {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     background-color: #fff;
     border-radius: 3rem;
     position: absolute;
     top: 0.75rem;
-    width: 4.5rem;
-    height: 4.5rem;
-    line-height: 4.5rem;
-    font-size: 2rem;
+    width: 3rem;
+    height: 3rem;
+    line-height: 3.4rem;
+    font-size: 1.4rem;
     text-align: center;
     right: 0.75rem;
     cursor: pointer;
@@ -170,28 +175,31 @@ button:disabled {
 }
 
 .btn-sessions {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     background-color: #fff;
     border-radius: 3rem;
     position: absolute;
-    bottom: 0.75rem;
-    font-size: 1.5rem;
+    color: #000;
+    text-decoration: none;
+    bottom: 1rem;
     text-align: center;
-    right: 0.75rem;
-    padding: 1.3rem 2rem 1rem 2rem;
+    line-height: 1.2rem;
+    right: 1rem;
+    padding: 0.8rem 1rem 0.6rem;
     cursor: pointer;
 }
 
 .btn-case {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     background-color: #fff;
     border-radius: 3rem;
     position: absolute;
-    top: 0.75rem;
+    top: 1rem;
     width: fit-content;
-    right: 10.75rem;
+    left: 20.5rem;
     cursor: pointer;
-    padding: 1.3rem 2rem 1rem 2rem;
+    line-height: 1.2rem;
+    padding: 0.8rem 1rem 0.6rem;
 }
 
 .btn-case.active, .btn-case:hover {
@@ -200,15 +208,16 @@ button:disabled {
 }
 
 .btn-compose {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     background-color: #fff;
     border-radius: 3rem;
     position: absolute;
-    top: 0.75rem;
+    top: 1rem;
     width: fit-content;
-    left: 10.75rem;
+    left: 11.75rem;
     cursor: pointer;
-    padding: 1.3rem 2rem 1rem 2rem;
+    line-height: 1.2rem;
+    padding: 0.8rem 1rem 0.6rem;
 }
 
 .btn-compose.active {
@@ -251,7 +260,7 @@ button:disabled {
     z-index: 100;
     width: calc(100vw - 1rem);
     position: fixed;
-    top: 6rem;
+    top: 4.5rem;
     display: flex;
     left: 1rem;
     margin-top: 0;
@@ -277,14 +286,16 @@ button {
 }
 
 #message-form {
-    padding: 0.75rem;
+    padding: 1rem;
     position: absolute;
-    bottom: 0;
+    top: 0;
     font-size: 1.5rem;
 }
 
 #message-form input {
-    font-size: 1.5rem;
+    width: 10rem;
+    height: 2.5rem;
+    font-size: 1.4rem;
 }
 
 #message-form button {
@@ -297,9 +308,9 @@ button {
 }
 
 .read .chat__messages {
-    margin: 5.9rem 0.75rem 8rem;
+    margin: 4.5rem 0.75rem 8rem;
     padding: 0;
-    width: 98.5vw;
+    width: calc(100vw - 1.5rem);
     border-radius: 3rem;
     background-color: #fff;
 }
@@ -307,6 +318,7 @@ button {
 .color-indicator {
     width: 4.5rem;
     height: 4.5rem;
+    display: none;
     position: absolute;
     top: 0.75rem;
     margin-left: 0;
@@ -384,12 +396,12 @@ input[type="color"] {
     margin: 0 auto;
     text-align: center;
     display: block;
-    height: 5rem;
+    height: 3rem;
     padding: 0;
-    width: 5rem !IMPORTANT;
+    width: 3rem !IMPORTANT;
     border-radius: 100% !IMPORTANT;
     width: 15em;
-    margin-bottom: 3rem !important;
+    margin-bottom: 1rem !important;
 }
 
 .color_text {
@@ -521,15 +533,15 @@ input[type="color"] {
 
 .slider-container {
     position: fixed;
-    right: 23.5rem;
-    top: 1.5rem;
+    left: 31.5rem;
+    top: 1.2rem;
 }
 
 /*Chrome*/
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     input[type='range'] {
     /*  overflow: hidden;*/
-      width: 20rem;
+      width: 13rem;
       padding: 0.1rem;
       -webkit-appearance: none;
       background-color: red;
@@ -543,10 +555,10 @@ input[type="color"] {
     }
     
     input[type='range']::-webkit-slider-thumb {
-      width: 3rem;
-      margin-top: -1.2rem;
+      width: 2rem;
+      margin-top: -0.7rem;
       -webkit-appearance: none;
-      height: 3rem;
+      height: 2rem;
       margin-left: 0;
       border-radius: 100%;
       cursor: ew-resize;
@@ -594,12 +606,11 @@ input[type="range"]::-ms-fill-upper {
 
 .usercount {
     position: fixed;
-    background-color: #fff;
     border-radius: 3rem;
-    bottom: 0.75rem;
+    bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-    padding: 1.3rem 2rem 1rem 2rem;
+    padding: 1rem 2rem 1rem 2rem;
 }
 
 .usercount span {
