--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -166,6 +166,7 @@ button:disabled {
     top: 0.75rem;
     width: 3rem;
     height: 3rem;
+    z-index: 11;
     line-height: 3.4rem;
     font-size: 1.4rem;
     text-align: center;
@@ -305,6 +306,14 @@ button {
     color: black;
     cursor: pointer;
     margin-left: -0.5rem;
+}
+
+a {
+    color: blue;
+}
+
+.sections {
+    margin: 3rem 0;
 }
 
 .read .chat__messages {
@@ -681,4 +690,41 @@ input[type="range"]::-ms-fill-upper {
     font-weight: 300;
     font-weight: 400;
     padding: 0 24px 0 24px;
+}
+
+
+.info__overlay {
+    position: fixed;
+    height: 100vh;
+    overflow: scroll;
+    width: 100vw;
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    top: 0;
+    width: 50vw;
+    -webkit-transform: translateY(100vh);
+    -ms-transform: translateY(100vh);
+    transform: translateY(100vh);
+    padding: 1rem;
+    z-index: 10;
+    max-width: none;
+    font-size: 1.4rem;
+    line-height: 1.2rem;
+    right: 0;
+    background-color: #fff;
+}
+
+.info__overlay p, .info__overlay h1, .info__overlay h2 {
+    font-size: 1.4rem;
+    max-width: 50vw;
+    margin-bottom: 1rem;
+    line-height: 1.4rem;
+    margin-bottom: 1rem;
+}
+
+.info__overlay.active {
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
 }
